# mishmash

./: LICENSE.md  README.md  pyproject.toml
mishmash/: __init__.py  cli.py  fetch_metadata.py  metadatafetcher.py  scrape_pdf.py  urls.json
mishmash/entrezpy_clients/: _efetch.py  _esearch.py  _pipelines.py  _utils.py
ord_mishmash/: __init__.py  cli.py  metadatafetcher.py  scrape_pdf.py  scrape_pdf2.py
ord_mishmash/entrezpy_clients/: _efetch.py  _pipelines.py  _sra_meta.py  _utils.py
tests/: test_pmc_scraper.py
tests/data/: get_txt.py  test_sample_1.txt  test_sample_1.xml  test_sample_2.txt  test_sample_2.xml  test_sample_3.txt  test_sample_3.xml  test_sample_4.txt  test_sample_5.txt  test_sample_5.xml  test_sample_6.txt  test_sample_6.xml  test_sample_7.txt  test_sample_8.txt  test_sample_9.xml
